add proto header to nginx proxy

--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -1,10 +1,11 @@
-resolver 127.0.0.11 valid=5s ipv6=off;
+olver 127.0.0.11 valid=5s ipv6=off;
 
 server {
     listen 80;
 
     root /usr/share/nginx/html;
-
+    server_name _;
+    return 301 https://$host$request_uri;
 }
 server {
    listen 443;
@@ -32,7 +33,7 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass https://$container:15000;
+      proxy_pass http://$container:15000;
     }
 }
 
@@ -92,8 +93,10 @@ server {
       proxy_set_header Connection "upgrade";
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto https;
       proxy_set_header Host $host;
       proxy_pass http://$container:8080;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -125,13 +128,14 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:4000;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.(.*)$;
+    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby|rails4|rails5)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -156,6 +160,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:3000;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -188,6 +193,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:8000;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -219,6 +225,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:8181;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -248,6 +255,42 @@ server {
       proxy_set_header Connection "upgrade";
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:8080;
+    }
+}
+
+
+
+
+
+server {
+   listen 443;
+   server_name ~^(?<container>.*)\-(drupal)\.(.*)$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $host;
       proxy_pass http://$container:8080;
     }
