--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -1,4 +1,4 @@
-olver 127.0.0.11 valid=5s ipv6=off;
+resolver 127.0.0.11 valid=5s ipv6=off;
 
 server {
     listen 80;
@@ -17,7 +17,7 @@ server {
    ssl_prefer_server_ciphers on;
    ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
    add_header 'Access-Control-Allow-Origin' '*';
-   error_page 502 /502.html;
+   error_page 404 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
       root /etc/nginx/conf.d;
@@ -47,7 +47,7 @@ server {
    ssl_prefer_server_ciphers on;
    ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
    add_header 'Access-Control-Allow-Origin' '*';
-   error_page 502 /502.html;
+   error_page 404 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
       root /etc/nginx/conf.d;
@@ -93,10 +93,9 @@ server {
       proxy_set_header Connection "upgrade";
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto https;
+      #proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $host;
       proxy_pass http://$container:8080;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -128,14 +127,13 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:4000;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby|rails4|rails5)\.(.*)$;
+    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby|rails4|rails50)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -160,7 +158,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:3000;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto https;
     }
 }
 
@@ -193,7 +191,6 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:8000;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -225,7 +222,6 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:8181;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -240,7 +236,7 @@ server {
    ssl_prefer_server_ciphers on;
    ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
    add_header 'Access-Control-Allow-Origin' '*';
-   error_page 502 /502.html;
+   error_page 404 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
       root /etc/nginx/conf.d;
