nginx limit requests

--- a/ansible/roles/codepicnic-app/templates/codepicnic.conf
+++ b/ansible/roles/codepicnic-app/templates/codepicnic.conf
@@ -2,10 +2,41 @@ server {
         listen 80 default_server;
         server_name {{ app_vhost_main }};
         error_log /var/log/nginx/{{ app_vhost_main }}-error.log info;
-        error_log /var/log/nginx/{{ app_vhost_main }}-access.log;
+        acces_log_log /var/log/nginx/{{ app_vhost_main }}-access.log;
+        limit_req zone=codepicnic burst=5;
         passenger_enabled on;
-        passenger_user app;
+        passenger_user codepicnic;
         passenger_app_env production; 
-        root /home/app/codepicnic/public;
+        root /home/codepicnic/app/public;
+
+        if ($http_x_forwarded_proto != "https") {
+                rewrite ^(.*)$ https://$server_name$1 permanent;
+        }
+
+        if ($request_method !~ ^(GET|HEAD|PUT|POST|DELETE|OPTIONS)$ ){
+            return 405;
+        }
+
+        location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|ace)/ {
+            gzip_static on;
+            limit_req zone=assets burst=5;
+            expires     max;
+            root /home/codepicnic/app/public;
+            add_header  'Cache-Control' public;
+            add_header  'Last-Modified' "";
+            add_header  'ETag' "";
+            add_header 'Access-Control-Allow-Origin' '*';
+            break;
+        }
+        location ~ \.(php)$ {
+            return 405;
+        }
+
+        error_page 502 /502.html;
+        location = /502.html {
+            add_header 'Access-Control-Allow-Origin' '*';
+            root /home/codepicnic/app/public;
+        }
+
 }
 
