--- a/ansible/roles/passenger/templates/nginx.conf
+++ b/ansible/roles/passenger/templates/nginx.conf
@@ -65,6 +65,12 @@ http {
     passenger_root /usr/lib/ruby/vendor_ruby/phusion_passenger/locations.ini;
     passenger_ruby /usr/bin/passenger_free_ruby;
 
+    ## Limit requests
+    limit_req_log_level info ;
+    limit_req_zone $binary_remote_addr zone=codepicnic:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=assets:1m rate=10r/s;
+
+
     ##
     # Virtual Host Configs
     ##
