--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -9,6 +9,7 @@
       instance_tags:
         Name: "{{ name_swarm_node }}"
         Cluster: "{{ cluster_swarm }}"
+        Role: "swarm-demo"
       region: "{{ aws_region }}"
       ebs_optimized: "{{ ebs_optimized_swarm }}"
       volumes:
@@ -17,6 +18,7 @@
       count_tag:
         Name: "{{ name_swarm_node }}"
         Project: "{{ cluster_swarm }}"
+        Role: "swarm-demo"
       vpc_subnet_id : "{{ subnet_swarm }}"
       assign_public_ip: yes
       instance_profile_name: "{{ ec2_iam_role }}"
