--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -8,7 +8,7 @@
       wait_timeout: 500
       instance_tags:
         Name: "{{ cluster_swarm }}-master"
-        Cluster: "{{ cluster_swarm }}"
+        Project: "{{ cluster_swarm }}"
         Role: "swarm-demo"
       region: "{{ aws_region }}"
       ebs_optimized: "{{ ebs_optimized_swarm }}"
