--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -25,10 +25,10 @@
     register: ec2
     with_items: cluster_type 
   - name: print ec2
-    debug: var=ec2.tagged_instances
+    debug: var=ec2.results
   - name: Add new instance to host group
     add_host: hostname={{ item.private_ip }} groups=swarm-master ansible_ssh_private_key_file=/var/lib/jenkins/keys/key_swarm_rsa
-    with_items: ec2.tagged_instances
+    with_items: ec2.results['tagged_instances']
   - name: Wait for SSH to come up
     wait_for: host={{ item.private_ip }} port=22 delay=60 timeout=320 state=started
     with_items: ec2.tagged_instances
