--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -2,4 +2,20 @@
   connection: local
   roles:
       - swarm-ec2 
+- hosts: swarm-master 
+  roles:
+      - base
+      - aws-monitoring-scripts
+      - sysdig
+      - docker
+      - newrelic
+        #- swarm
+        #- swarm-consul
+        #- swarm-manager
+        #- swarm-registry
+      #- tuna
+  remote_user: ubuntu
+  become: yes
+  become_user: root
+  become_method: sudo
 
