--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -8,3 +8,13 @@
       restart_policy: always
       ports:
       - "8500:8500"    
+  - name: run consul network
+    docker: 
+    name: consul-network
+      image: progrium/consul
+      state: started
+      command: "-server -bootstrap"
+      detach: True
+      restart_policy: always
+      ports:
+      - "8501:8501"
