--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,3 +1,7 @@
+  - name: Gather facts
+    action: ec2_facts
+  - name: set fact
+    set_fact: consul_network="{{ ansible_ec2_local_ipv4 }}"
   - name: run consul
     docker: 
       name: consul
