--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,7 +1,5 @@
-  - name: Gather facts
-    action: ec2_facts
-  - name: set fact
-    set_fact: consul_network="{{ ansible_ec2_local_ipv4 }}"
+  - name: set fact consul_network
+    set_fact: consult_network="{{ hostvars[groups['swarm-master'][0]]['ansible_eth0']['ipv4']['address'] }}"
   - name: run consul
     docker: 
       name: consul
