--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -1,5 +1,7 @@
   - name: Gather facts
     action: ec2_facts
+  - name: set fact consul_network
+    set_fact: consult_ip="{{ hostvars[groups['swarm-master'][0]]['ansible_eth0']['ipv4']['address'] }}"
   - name: certs directory
     file: path=/certs state=directory mode=0755
   - name: copy certs
@@ -8,7 +10,6 @@
        - wildcard.crt
        - wildcard.key
   - name: run manager 
-    #shell: "docker run -d -p 4000:4000 --name swarm-manager swarm manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
     docker:
       name: swarm-manager
       image: swarm
