--- a/ansible/roles/tuna/tasks/main.yaml
+++ b/ansible/roles/tuna/tasks/main.yaml
@@ -1,12 +1,15 @@
-  - name: run tuna
-    #docker run -d -p 80:80 --name tuna -e DOCKER_HOST=172.21.1.135:4000 registry.codepicnic.com:5000/codepicnic/tuna_20160327 
-    docker:
-      name: tuna 
-      image: registry.codepicnic.com:5000/codepicnic/tuna_20160327
-      state: started
-      detach: True
-      restart_policy: always
-      ports:
-      - "80:80"
-      env:
-        DOCKER_HOST: "{{ master_ip:4000 }}"
+- name: Tag and push to local registry
+  docker_image:
+     name: registry.codepicnic.com:5000/codepicnic/tuna_base
+     tag: tuna_base 
+#- name: run tuna
+#    docker:
+#      name: tuna 
+#      image: registry.codepicnic.com:5000/codepicnic/tuna_20160327
+#      state: started
+#      detach: True
+#      restart_policy: always
+#      ports:
+#      - "80:80"
+#      env:
+#        DOCKER_HOST: "{{ master_ip:4000 }}"
