--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -13,7 +13,7 @@
       - swarm
       - swarm-manager
       #- swarm-registry
-      #- tuna
+      - tuna
   remote_user: ubuntu
   become: yes
   become_user: root
