--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,7 +1,8 @@
   - name: set fact consul_network
     set_fact: consult_network="{{ hostvars[groups['swarm-master'][0]]['ansible_eth0']['ipv4']['address'] }}"
   - name: print consult_network 
-    debug: var=hostvars[groups]
+    debug: var=hostvars[item]
+    with_items: groups['swarm-master']
   - name: print consult_network 
     debug: var=consul_network
   - name: run consul
