--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,10 +1,9 @@
   - name: set fact consul_network
-    set_fact: consult_network="{{ hostvars[groups['swarm-master'][0]]['ansible_eth0']['ipv4']['address'] }}"
-  - name: print consult_network 
-    debug: var=hostvars[item]
+    set_fact: consult_network="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
     with_items: groups['swarm-master']
-  - name: print consult_network 
-    debug: var=consul_network
+#  - name: print consult_network 
+#    debug: var=hostvars[item]
+#    with_items: groups['swarm-master']
   - name: run consul
     docker: 
       name: consul
