--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,9 +1,11 @@
+  - name: print consult_network 
+    debug: var=hostvars[groups]
+    with_items: groups['swarm-master']
   - name: set fact consul_network
     set_fact: consult_network="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
     with_items: groups['swarm-master']
-#  - name: print consult_network 
-#    debug: var=hostvars[item]
-#    with_items: groups['swarm-master']
+  - name: print consult_network 
+    debug: var=consul_network
   - name: run consul
     docker: 
       name: consul
