--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,5 +1,5 @@
   - name: print consult_network 
-    debug: var=hostvars[groups]
+    debug: var=hostvars[item]
     with_items: groups['swarm-master']
   - name: set fact consul_network
     set_fact: consult_network="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
