--- a/ansible/roles/swarm/tasks/main.yaml
+++ b/ansible/roles/swarm/tasks/main.yaml
@@ -1,3 +1,6 @@
+  - name: set fact consul_network
+    set_fact: consul_network="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
+    with_items: groups['swarm-master']
   - name:  docker opts 
     template: src=docker.sysconfig dest=/etc/default/docker
   - name: hosts for registry 
