--- a/ansible/roles/tuna/tasks/main.yaml
+++ b/ansible/roles/tuna/tasks/main.yaml
@@ -1,14 +1,17 @@
+  - name: set fact consul_network
+    set_fact: swarm_master_ip="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
+    with_items: groups['swarm-master']
 - name: Pull from registry
   docker_image:
      name: registry.codepicnic.com:5000/codepicnic/tuna_base
-#- name: run tuna
-#    docker:
-#      name: tuna 
-#      image: registry.codepicnic.com:5000/codepicnic/tuna_20160327
-#      state: started
-#      detach: True
-#      restart_policy: always
-#      ports:
-#      - "80:80"
-#      env:
-#        DOCKER_HOST: "{{ master_ip:4000 }}"
+- name: run tuna
+    docker:
+      name: tuna 
+      image: registry.codepicnic.com:5000/codepicnic/tuna_master
+      state: started
+      detach: True
+      restart_policy: always
+      ports:
+      - "80:80"
+      env:
+        DOCKER_HOST: "{{ swarm_master_ip:4000 }}"
