--- a/ansible/roles/reboot/tasks/main.yaml
+++ b/ansible/roles/reboot/tasks/main.yaml
@@ -1,15 +1,14 @@
   - name: Gather facts
     action: ec2_facts
-  - name: stat reboot file
-    stat: path=/var/tmp/reboot.txt
-    register: stat_reboot 
   - name: restart machine
-    shell: sleep 2 && shutdown -r now "Ansible updates triggered"
+    shell: sleep 2 && shutdown -r now "Ansible updates triggered" creates=/var/tmp/reboot.txt
     async: 3 
     poll: 0
     ignore_errors: true
-    creates: /var/tmp/reboot.txt
-    when: stat_reboot.stat.exists == False 
   - name: Wait for SSH to come up
     local_action: wait_for host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
     sudo: false
+  - name: create reboot file after reboot
+    file: 
+        path: /var/tmp/reboot.txt
+        state: touch
