--- a/ansible/roles/reboot/tasks/main.yaml
+++ b/ansible/roles/reboot/tasks/main.yaml
@@ -7,7 +7,7 @@
     ignore_errors: true
   - name: Wait for SSH to come up
     local_action: wait_for host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
-    sudo: false
+    become: false
   - name: create reboot file after reboot
     file: 
         path: /var/tmp/reboot.txt
