--- a/ansible/roles/reboot/tasks/main.yaml
+++ b/ansible/roles/reboot/tasks/main.yaml
@@ -1,7 +1,8 @@
   - name: Gather facts
     action: ec2_facts
   - name: restart machine
-    shell: sleep 2 && shutdown -r now "Ansible updates triggered" creates=/var/tmp/reboot.txt
+  #shell: sleep 2 && shutdown -r now "Ansible updates triggered" creates=/var/tmp/reboot.txt
+    shell: sleep 2 && shutdown -r now "Ansible updates triggered"
     async: 3 
     poll: 0
     ignore_errors: true
