--- a/ansible/roles/base/tasks/main.yaml
+++ b/ansible/roles/base/tasks/main.yaml
@@ -8,4 +8,5 @@
     sysctl: name="{{ item.name }}" value="{{ item.value }}" state=present
     with_items: "{{ sysctl_options }}"
   - name: stat reboot.txt
+    stat: path=/var/tmp/reboot.txt
     register: stat_reboot 
