--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -11,7 +11,7 @@
         debug: var=stat_reboot
   roles:
       - base
-      - { role: reboot, when stat_reboot.stat.exists == 'False' }  
+      - { role: reboot, when: stat_reboot.stat.exists == 'False' }  
       - aws-monitoring-scripts
       - sysdig
       - docker
