--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -64,7 +64,7 @@
     debug: var=ec2_nodes.results[0]
   - name: Add new instance to host group
     add_host: hostname={{ item.private_ip }} groups=swarm-node ansible_ssh_private_key_file=/var/lib/jenkins/keys/key_swarm_rsa
-    with_items: '{{ ec2.results[0].tagged_instances }}'
+    with_items: '{{ ec2_nodes.results[0].tagged_instances }}'
   - name: Wait for SSH to come up
     wait_for: host={{ item.private_ip }} port=22 delay=5 timeout=600 state=started
-    with_items: '{{ ec2.results[0].tagged_instances }}'
+    with_items: '{{ ec2i_nodes.results[0].tagged_instances }}'
