--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -67,4 +67,4 @@
     with_items: '{{ ec2_nodes.results[0].tagged_instances }}'
   - name: Wait for SSH to come up
     wait_for: host={{ item.private_ip }} port=22 delay=5 timeout=600 state=started
-    with_items: '{{ ec2i_nodes.results[0].tagged_instances }}'
+    with_items: '{{ ec2_nodes.results[0].tagged_instances }}'
