--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -4,6 +4,10 @@
       - swarm-ec2 
 - hosts: swarm-master
   tasks: [ ]
+  remote_user: ubuntu
+  become: yes
+  become_user: root
+  become_method: sudo
 - hosts: swarm-node
   pre_tasks:
       - name: register reboot 
