--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -5,7 +5,7 @@
 - hosts: swarm-master
   tasks:
       - name: debug
-        debug: var="{{ groups['swarm-master'] }}" 
+        debug: var="{{ groups['swarm-master'][0] }}" 
   remote_user: ubuntu
   become: yes
   become_user: root
