--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -6,8 +6,8 @@
   gather_facts: true
   tasks:
       - name: debug
-        debug: var="{{ hostvars[item] }}"
-        with_items: groups['swarm-master'] 
+        debug: var=hostvars[item]
+        with_items: groups['swarm-master']
   remote_user: ubuntu
   become: yes
   become_user: root
