add base images

--- a/ansible/create-swarm-ami.yaml
+++ b/ansible/create-swarm-ami.yaml
@@ -12,7 +12,7 @@
       - docker-apparmor
       - newrelic
       - swarm
-      - swarm-node
+      - swarm-node-ami
       - create-ami
   remote_user: ubuntu
   become: yes
