--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -1,27 +1,36 @@
   - name: Gather facts
     action: ec2_facts
-  - name: nginx conf dir 
-    file: path=/etc/nginx/conf.d state=directory mode=0755
-  - name: copy nginx conf 
-    copy: src="{{ item }}" dest=/etc/nginx/conf.d
-    with_items:
-       - backend.conf 
-       - nginx.crt
-       - nginx.key
-       - 502.html
-  - name: copy docker-compose.yaml 
-    copy: src="docker-compose.yaml" dest=/opt/docker-compose.yaml
-  - name: copy ipt.sh 
+  - name: copy ipt.sh
     copy: src="ipt.sh" dest=/opt/ipt.sh
-  - name: pull images 
-    shell: docker pull registry.codepicnic.com:5000/codepicnic/{{ item }}
+  - name: pull images
+    shell: docker pull registry.codepicnic.com:5000/{{ item }}
     with_items: "{{ base_images }}"
-  - name: pull images 
+  - name: pull images
     shell: docker pull {{ item }}
-    with_items:
        - nginx
        - google/cadvisor
-       - swarm 
-  - name: tag images 
-    shell: docker tag registry.codepicnic.com:5000/codepicnic/{{ item }} codepicnic/{{ item }}
+       - swarm
+  - name: tag images
+    shell: docker tag registry.codepicnic.com:5000/{{ item }} {{ item }}
     with_items: "{{ base_images }}"
+  - name: run swarm node 
+    docker:
+      name: swarm-{{ ansible_ec2_local_hostname }}
+      image: swarm
+      state: started
+      command: "join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
+      detach: True
+      restart_policy: always
+  - name: run swarm cadvisor
+    docker:
+      name: cadvisor-{{ ansible_ec2_local_hostname }}
+      image: google/cadvisor:latest
+      state: started
+      detach: True
+      restart_policy: always
+      ports:
+      - 3200:8080
+      volumes:
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
