--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -18,13 +18,14 @@
         stat: path=/var/tmp/reboot.txt
         register: stat_reboot
   roles:
-      - base
-      - { role: reboot, when: stat_reboot.stat.exists == 'False' }  
-      - aws-monitoring-scripts
-      - sysdig
-      - docker
-      - newrelic
+      #- base
+      #- { role: reboot, when: stat_reboot.stat.exists == 'False' }  
+      #- aws-monitoring-scripts
+      #- sysdig
+      #- docker
+      #- newrelic
       - swarm
+      - swrm-node
   remote_user: ubuntu
   become: yes
   become_user: root
