--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -7,6 +7,7 @@
     with_items: "{{ base_images }}"
   - name: pull images
     shell: docker pull {{ item }}
+    with_items:
        - nginx
        - google/cadvisor
        - swarm
