--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -12,24 +12,6 @@
   become: yes
   become_user: root
   become_method: sudo
-- hosts: swarm-node
-  pre_tasks:
-      - name: register reboot 
-        stat: path=/var/tmp/reboot.txt
-        register: stat_reboot
-  roles:
-      #- base
-      #- { role: reboot, when: stat_reboot.stat.exists == 'False' }  
-      #- aws-monitoring-scripts
-      #- sysdig
-      #- docker
-      #- newrelic
-      - swarm
-      - swarm-node
-  remote_user: ubuntu
-  become: yes
-  become_user: root
-  become_method: sudo
 - hosts: swarm-master
   pre_tasks:
       - name: register reboot 
@@ -51,4 +33,21 @@
   become: yes
   become_user: root
   become_method: sudo
-
+- hosts: swarm-node
+  pre_tasks:
+      - name: register reboot 
+        stat: path=/var/tmp/reboot.txt
+        register: stat_reboot
+  roles:
+      - base
+      - { role: reboot, when: stat_reboot.stat.exists == 'False' }  
+      - aws-monitoring-scripts
+      - sysdig
+      - docker
+      - newrelic
+      - swarm
+      - swarm-node
+  remote_user: ubuntu
+  become: yes
+  become_user: root
+  become_method: sudo
