add security headers

--- a/ansible/roles/codepicnic-app/templates/codepicnic.conf
+++ b/ansible/roles/codepicnic-app/templates/codepicnic.conf
@@ -8,6 +8,9 @@ server {
         passenger_user codepicnic;
         passenger_app_env production; 
         root /home/codepicnic/app/public;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+
 
         if ($http_x_forwarded_proto != "https") {
                 rewrite ^(.*)$ https://$server_name$1 permanent;
