--- a/ansible/roles/devpad-ec2/tasks/main.yaml
+++ b/ansible/roles/devpad-ec2/tasks/main.yaml
@@ -27,7 +27,7 @@
   - name: print ec2
     debug: var=ec2.results[0]
   - name: Add new instance to host group
-    add_host: hostname={{ item.private_ip }} groups=devpad-app ansible_ssh_private_key_file=/var/lib/jenkins/keys/key_codepicnic_rsa
+    add_host: hostname={{ item.private_ip }} groups=app ansible_ssh_private_key_file=/var/lib/jenkins/keys/key_codepicnic_rsa
     with_items: '{{ ec2.results[0].tagged_instances }}'
   - name: Wait for SSH to come up
     wait_for: host={{ item.private_ip }} port=22 delay=5 timeout=600 state=started
