--- a/ansible/deploy-devpad.yaml
+++ b/ansible/deploy-devpad.yaml
@@ -9,6 +9,7 @@
         register: stat_reboot
   roles:
       - base
+      - devpad-base  
       - { role: reboot, when: stat_reboot.stat.exists == False }
       - aws-monitoring-scripts
       - sysdig
