--- a/ansible/roles/devpad-base/tasks/main.yaml
+++ b/ansible/roles/devpad-base/tasks/main.yaml
@@ -1,6 +1,8 @@
   - name: format device
     filesystem: fstype="xfs" dev="/dev/xvdf"
+  - name: dir 
+    file: path=/home/devpad state=directory
   - name: mount device
-    mount: name="/home" src="/dev/xvdf" fstype="xfs" opts=defaults,noatime state=mounted
+    mount: name="/home/devpad" src="/dev/xvdf" fstype="xfs" opts=defaults,noatime state=mounted
   - name: add app user
     user: name=devpad comment="Application"
