--- a/ansible/roles/devpad-app/tasks/main.yaml
+++ b/ansible/roles/devpad-app/tasks/main.yaml
@@ -16,5 +16,17 @@
   become_user: "{{ app_user }}"
   vars:
     ansible_ssh_pipelining: true
+- name: git config
+  git_config: name=user.email value="jenkins@codepicnic.com" 
+  become: yes
+  become_user: "{{ app_user }}"
+  vars:
+    ansible_ssh_pipelining: true
+- name: git config
+  git_config: name=user.name value="Jenkins" 
+  become: yes
+  become_user: "{{ app_user }}"
+  vars:
+    ansible_ssh_pipelining: true
 - name: permissions
   file: path="/home/{{ app_user }}/app" owner="{{ deployment_user }}" group="{{ app_user }}" recurse=yes mode=775
