--- a/ansible/roles/devpad-app/templates/nginx.conf
+++ b/ansible/roles/devpad-app/templates/nginx.conf
@@ -38,7 +38,10 @@ http {
     ##
     # Logging Settings
     ##
-
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for" $request_time'
+                      '$request_body' ;
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
