increase codepicnic connect timeout

--- a/ansible/create-devpad-ami.yaml
+++ b/ansible/create-devpad-ami.yaml
@@ -12,9 +12,8 @@
       - newrelic
       - ruby23
       - passenger
-      #- devpad-app
-      #- swarm
-      #- swarm-node-ami
+      - devpad-app
+      - swarm-node-ami
       #- create-ami
   remote_user: ubuntu
   become: yes
