--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -70,14 +70,14 @@ server {
 
 server {
    listen 443;
-   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.(.*)$;
+   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|elixir|mono|swift)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
    ssl_prefer_server_ciphers on;
    ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-   add_header 'Access-Control-Allow-Origin' '*';
+   #add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
@@ -95,6 +95,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       #proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $host;
+      #proxy_set_header Access-Control-Allow-Origin "";
       proxy_pass http://$container:8080;
     }
 }
@@ -133,7 +134,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby|rails4|rails50)\.(.*)$;
+    server_name ~^(?<container>.*)\-(mean|angular|rails|ruby23|ruby22|ruby|rails4|rails50|react)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -157,16 +158,80 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass http://$container:3000;
     proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+      proxy_pass http://$container:3000;
+    }
+}
+
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(ember)\.(.*)$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+      proxy_pass http://$container:4200;
     }
 }
 
 
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(cakephp)\.(.*)$;
+   ssl on; 
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:8765;
+        proxy_set_header X-Forwarded-Proto https;
+    }
+}
+
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(django)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(django|laravel)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -190,6 +255,7 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
+      proxy_hide_header X-Frame-Options;
       proxy_pass http://$container:8000;
     }
 }
@@ -197,7 +263,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(perfect)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(perfect|perfect2)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -224,6 +290,135 @@ server {
       proxy_pass http://$container:8181;
     }
 }
+
+server {
+   listen 443; 
+   server_name ~^(?<container>.*)\-(dancer)\.(.*)$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_pass http://$container:5000;
+    }
+}
+
+server {
+   listen 443;
+   server_name ~^(?<container>.*)\-(sinatra)\.(.*)$;
+   ssl on; 
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+
+      proxy_pass http://$container:9292;
+    }
+}
+
+server {
+   listen 443;
+   server_name ~^(?<container>.*)\-(cuba)\.(.*)$;
+   ssl on; 
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-fRAme-Options;
+      proxy_pass http://$container:9292;
+    }
+}
+
+
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(?<port>[0-9]+)\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:$port;
+    }
+}
+
 
 
 server {
