--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -231,7 +231,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(django|laravel)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(django|laravel|symfony)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
