--- a/ansible/roles/codepicnic-app/templates/codepicnic.conf
+++ b/ansible/roles/codepicnic-app/templates/codepicnic.conf
@@ -1,5 +1,5 @@
 server {
-        listen 80 default_server;
+        listen 80 ;
         server_name {{ app_vhost_main }};
         error_log /var/log/nginx/{{ app_vhost_main }}-error.log info;
         acces_log_log /var/log/nginx/{{ app_vhost_main }}-access.log;
