--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -9,6 +9,11 @@
 #  become: yes
 #  become_user: root
 #  become_method: sudo
+- hosts: all
+  gather_facts: False
+  tasks:
+  - name: install python 2
+    raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
 - hosts: swarm-master
   pre_tasks:
       - name: register reboot 
