--- a/ansible/deploy-swarm.yaml
+++ b/ansible/deploy-swarm.yaml
@@ -14,6 +14,10 @@
   tasks:
   - name: install python 2
     raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  remote_user: ubuntu
+  become: yes
+  become_user: root
+  become_method: sudo
 - hosts: swarm-master
   pre_tasks:
       - name: register reboot 
