--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -14,13 +14,21 @@
       restart_policy: always
       ports:
       - "8500:8500"    
-  - name: run consul network
-    docker: 
-      name: consul-network
-      image: progrium/consul
-      state: started
-      command: "-server -bootstrap -http-port 8501"
-      detach: True
-      restart_policy: always
-      ports:
-      - "8501:8501"
+#  - name: run consul network
+#    docker: 
+#      name: consul-network
+#      image: progrium/consul
+#      state: started
+#      command: "-server -bootstrap -http-port 8501"
+#      detach: True
+#      restart_policy: always
+#      ports:
+#      - "8501:8501"
+   - name: check consul download 
+     stat: path=/opt/consul_0.7.3_linux_amd64.zip
+     register: consul_zip_stat
+   - name: download consul
+     get_url: url=https://releases.hashicorp.com/consul/0.7.3/consul_0.7.3_linux_amd64.zip dest=/opt/consul_0.7.3_linux_amd64.zip mode=0755
+     when: consul_zip_stat.stat.exists == False
+   - name: copy and unpack
+     unarchive: src=/opt/consul_0.7.3_linux_amd64.zip dest=/usr/local/bin copy=no
