--- a/ansible/roles/swarm/handlers/main.yaml
+++ b/ansible/roles/swarm/handlers/main.yaml
@@ -1,2 +1,4 @@
    - name: docker-restart 
      service: name=docker state=restarted
+   - name: systemctl reload
+     shell: systemctl daemon-reload
