--- a/ansible/roles/swarm/tasks/main.yaml
+++ b/ansible/roles/swarm/tasks/main.yaml
@@ -6,6 +6,15 @@
     with_items: groups['swarm-master']
   - name:  docker opts 
     template: src=docker.sysconfig dest=/etc/default/docker
+  - name: docker service
+    template: src=docker.service dest=/lib/systemd/system/docker.service
+    notify: 
+    - systemctl reload
+    - docker restart
+  - name: docker configuration 
+    template: src=daemon.json dest=/etc/docker/daemon.json
+    notify: 
+    - docker restart
   - name: hosts for registry 
     template: src=hosts dest=/etc/hosts
   - name: start docker
